--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,14 +18,13 @@ const { title, description } = Astro.props;
 ---
 
 <meta charset="UTF-8" />
-<meta name="description" content="Astro description" />
 <meta name="viewport" content="width=device-width" />
 <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 <meta name="generator" content={Astro.generator} />
 
 <title>{title}</title>
 <meta name="title" content={title} />
-<meta name="description" content={description} />
+<meta name="description" content="COMMERCIAL & OFFICE CLEANING SERVICES The proof is in our numbers. We clean over 500 offices each day with our office cleaning services. 95% of our clients choose to stay with us at the end of their contract. View our Services Request your Quote Rated 5 out of 5 on Google Confidence guaranteed with over" />
 
 <!-- <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
