--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,13 @@
     <div class="ctnr">
         <div class="content">
             <a href="/" class="logo_anchor">
-                <img src="/tcn-logo-default.svg" alt="The Clean Network logo" />
+                <!-- <img src="/tcn-logo-default.svg" alt="The Clean Network logo" /> -->
+                <picture>
+                    <!-- <source media="(min-width:650px)" srcset="/tcn-logo-360.png"> -->
+                    <source media="(min-width:850px)" srcset="/logo/tcn-logo-720.webp">
+                    <source media="(min-width:300px)" srcset="/logo/tcn-logo-360.webp">
+                    <img src="/logo/tcn-logo-360.png" alt="The Clean Network logo">
+                </picture>
             </a>
             
             <p>Our ethos is to provide high standards of cleaning with strong account management to ensure smooth day to day running of your cleaning contract at an affordable price.</p>
