--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -10,28 +10,21 @@ import BaseHead from "../components/BaseHead.astro";
 <html lang="en">
 	<head>
 		<BaseHead title={title} description={description} />
+		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	</head>
 	<body>
 		<slot />
-		<style is:global>
-			:root {
-				--accent: 124, 58, 237;
-				--accent-gradient: linear-gradient(
-					45deg,
-					rgb(var(--accent)),
-					#da62c4 30%,
-					white 60%
-				);
+
+		<script>
+			if (window.netlifyIdentity) {
+			  window.netlifyIdentity.on("init", user => {
+				if (!user) {
+				  window.netlifyIdentity.on("login", () => {
+					document.location.href = "/admin/";
+				  });
+				}
+			  });
 			}
-			html {
-				font-family: system-ui, sans-serif;
-				background-color: #f6f6f6;
-			}
-			code {
-				font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-					DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New,
-					monospace;
-			}
-		</style>
+		  </script>
 	</body>
 </html>
