--- a/src/pages/services/[...slug].astro
+++ b/src/pages/services/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import { CollectionEntry, getCollection } from "astro:content";
 import SubpageLayout from "../../layouts/SubpageLayout.astro";
+import ContactSection from "../../components/ContactSection.astro"
 
 export async function getStaticPaths() {
     const services = await getCollection("services");
@@ -13,10 +14,14 @@ type Props = CollectionEntry<"services">;
 
 const services = Astro.props;
 const { Content } = await services.render();
+
+import "../../styles/posts.css"
 ---
 
 <SubpageLayout {...services.data}>
     <section class="intro">
+
+        <div class="cover" style={`background-image: url(${services.data.image});`}></div>
 
         <div class="content">
             <h1>{services.data.title} {String(services.data.title).includes('Cleaning') ? "" : "Cleaning"}</h1>
@@ -26,11 +31,9 @@ const { Content } = await services.render();
 
         <!-- <img src={services.data.image} alt={`Photo of ${services.data.title} cleaning service`}> -->
 
-        <div class="cover" style={`background-image: url(${services.data.image});`}></div>
+        <hr>
     
     </section>
-
-    <!-- <hr> -->
 
     <article>
         <Content />
@@ -39,58 +42,6 @@ const { Content } = await services.render();
 
         <a href="/services/" class="back">Back to services</a>
     </article>
+
+    <ContactSection />
 </SubpageLayout>
-
-
-<style>
-    .intro img {
-        height: clamp(5rem,60vmin,36rem);
-        object-fit: cover;
-        width: 100%;
-        object-position: center;
-    }
-
-    .intro .cover {
-        width: 100%;
-        height: clamp(5rem,91vmin,30rem);
-        background-position: 24% center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        margin-bottom: clamp(2rem,6vmin,5rem);
-    }
-
-    .intro .content, article {
-        width: clamp(9rem, 85vw, 85rem);
-        margin-inline: auto;
-    }
-
-    .intro .content {
-        margin: clamp(2rem,9vmin,4rem) auto;
-    }
-
-    .intro h1 {
-        font-size: clamp(2rem,9vw,5rem);
-        margin-bottom: 0.6rem;
-    }
-
-    .intro p {
-        font-size: clamp(1.5rem,3.6vmin,1.7rem);
-        font-weight: 400;
-        line-height: 1.4;
-        color: var(--grey);
-        /* text-align: justify; */
-    }
-
-    hr {
-        width: clamp(9rem,85vw,80rem);
-        margin-inline: auto;
-        margin-block: clamp(2rem,6vmin,3rem);
-        height: 0.1rem;
-        background-color: var(--light-a);
-    }
-
-    @media screen and (min-width:850px) {
-
-    }
-</style>
