--- a/src/layouts/SubpageLayout.astro
+++ b/src/layouts/SubpageLayout.astro
@@ -21,5 +21,8 @@ import "../styles/subpages.css";
         </main>
 
         <Footer />
+
+        <!-- Position:sticky address bar fix -->
+        <div style="position: fixed;"></div>
     </body>
 </html>
