--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -10,21 +10,21 @@ import BaseHead from "../components/BaseHead.astro";
 <html lang="en">
 	<head>
 		<BaseHead title={title} description={description} />
-		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+		<script is:inline src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	</head>
 	<body>
 		<slot />
 
 		<script>
 			if (window.netlifyIdentity) {
-			  window.netlifyIdentity.on("init", user => {
+				window.netlifyIdentity.on("init", user => {
 				if (!user) {
-				  window.netlifyIdentity.on("login", () => {
+					window.netlifyIdentity.on("login", () => {
 					document.location.href = "/admin/";
-				  });
+					});
 				}
-			  });
+				});
 			}
-		  </script>
+		</script>
 	</body>
 </html>
