--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from "../layouts/HomeLayout.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import ContactSection from "../components/ContactSection.astro"
+import ContactBox from "../components/ContactBox.astro";
 
 import { getCollection } from "astro:content";
 
@@ -192,7 +193,7 @@ const sectors = await getCollection("sectors");
 
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequuntur autem natus, quod deleniti velit esse itaque odit quis expedita.</p>
 
-					<a href="#" class="cta"><span></span> Check our Locations</a>
+					<a href="/locations/" class="cta"><span></span> Check our Locations</a>
 				</div>
 
 				<div class="image">
@@ -258,38 +259,12 @@ const sectors = await getCollection("sectors");
 					</div>
 
 					<hr>
-					
 
-					<div class="contact_box">
-						<a href="#" class="email">
-							<span class="icon"></span>
-							office@cleannetwork.co.uk
-						</a>
-						
-						<a href="#" class="tel">
-							<span class="icon"></span>
-							London: 020 3411 0275
-						</a>
-						
-						<a href="#" class="tel">
-							<span class="icon"></span>
-							Birmingham: 0121 3927529
-						</a>
-			
-						<hr>
-			
-						<div class="social">
-							<a href="#" class="icon instagram" title="Instagram"></a>
-			
-							<a href="#" class="icon facebook" title="Facebook"></a>
-			
-							<a href="#" class="icon linkedin" title="LinkedIn"></a>
-						</div>
-					</div>
+					<ContactBox />
 				</div>
 
 				<div class="map">
-					<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+					<iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
 				</div>
 			</div>
 		</section>
@@ -309,7 +284,7 @@ const sectors = await getCollection("sectors");
 
 	.intro > .ctnr .content {
 		width: var(--mobile-width);
-		margin: clamp(3rem, 10vw, 6rem) auto 0;
+		margin: clamp(2rem, 10vw, 6rem) auto 0;
 		display: flex;
 		flex-direction: column;
 		gap: clamp(1rem, 2vmin, 2.5rem);
