--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -5,22 +5,100 @@ import Header from "../../components/Header.astro";
 import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
 import ContactSection from "../../components/ContactSection.astro"
+import ContactBox from '../../components/ContactBox.astro';
 
 const { description } = Astro.props;
 ---
 
 <html lang="en">
     <head>
-        <BaseHead title="About Us · The Clean Network" description={description} />
+        <BaseHead title="Our Location · The Clean Network" description={description} />
     </head>
 
     <body>
         <Header />
 
         <main>
+            <div class="heading_ctnr default_bg">
+                <h1>Our Locations</h1>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit molestias quo id molestiae fuga esse nemo perspiciatis.</p>
+            </div>
+
+            <div class="map">
+                <div class="contact_box_ctnr">
+                    <ContactBox />
+                </div>
+                
+                <iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+            </div>
+
             <ContactSection />
         </main>
 
         <Footer />
     </body>
 </html>
+
+<style>
+    .map {
+        height: 100vh;
+        height: 100lvh;
+        background-color: var(--light-d);
+        position: relative;
+        border-top: 0.3rem solid var(--light);
+        /* box-shadow: 0 -1rem 3rem -1rem var(--light-b); */
+    }
+
+    .map::after {
+        content: "Loading map...";
+        position: absolute;
+        inset: 0;
+        margin: auto;
+        z-index: 1;
+        display: inline-block;
+        color: var(--primary-a);
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        font-size: 1.8rem;
+        text-transform: uppercase;
+        font-weight: 400;
+        letter-spacing: 0.2rem;
+    }
+
+    .map iframe {
+        position:relative;
+        z-index: 2;
+    }
+
+    .contact_box_ctnr {
+        color: var(--light);
+        background-color: rgb(16 106 166 / 91%);
+        backdrop-filter: blur(0.3rem);
+        position: absolute;
+        top: clamp(2rem, 5vmin, 5rem);
+        z-index: 3;
+        right: clamp(2rem, 5vmin, 5rem);
+        margin-inline: auto;
+        width: fit-content;
+        padding: 2rem 3rem;
+        border-radius: 0.6rem;
+        border: 0.1rem solid var(--primary-b);
+        transform: scale(0.8);
+        transform-origin: top right;
+    }
+
+    @media screen and (min-width:850px) {
+        .map {
+            position: sticky;
+            top:clamp(1rem,16vmin,7.5rem);
+        }
+
+        .contact_box_ctnr {
+            transform:unset;
+        }
+    }
+
+</style>
