--- a/src/styles/collections.css
+++ b/src/styles/collections.css
@@ -1,25 +1,6 @@
-
-.heading_ctnr {
-    padding: clamp(4rem,10vw,6rem) 0;
-    margin-bottom: 8rem;
-    background-color: var(--light-a);
-}
-
-h1 {
-    font-size: clamp(2rem,10vw,6rem);
-    text-align: center;
-    margin-bottom: 1rem;
-    color: var(--primary-a);
-}
-
-.heading_ctnr p {
-    display: block;
-    text-align: center;
-    margin-inline: auto;
-    width: clamp(9rem, 85vw, 70rem);
-    font-size: clamp(1.5rem,3.8vmin,1.8rem);
-    line-height: 1.5;
-    font-weight: 500;
+.panel {
+    border-radius: 1.2rem;
+    background-image: linear-gradient(-30deg,var(--light-a),transparent 62%);
 }
 
 main > .ctnr {
@@ -29,5 +10,29 @@ main > .ctnr {
 main > .ctnr > hr {
     height: 0.1rem;
     background-color: var(--light-a);
-    margin-block: 8rem 6rem;
+    margin-block: clamp(4rem, 13vmin, 13rem) clamp(4rem, 8vmin, 13rem);
+}
+
+h2 {
+    font-size: clamp(1rem,4.2vmin,1.8rem);
+    background-color: rgb(248 248 255 / 75%);
+    position: sticky;
+    top: calc(clamp(1rem,16vmin,7.5rem) + 0.1rem);
+    padding: clamp(0.6rem,2vmin,1rem) clamp(1.2rem,4vmin,1.8rem);
+    backdrop-filter: blur(0.3rem);
+    margin: 2rem 0 0.5rem 0.1rem;
+    border-radius: 0 0.3rem 0.3rem 0;
+    box-shadow: 0 1rem 1rem -0.8rem rgb(248 248 255 / 40%);
+    z-index: 2;
+    color: var(--primary-a);
+    font-weight: 600;
+    border-right: 0.1rem solid var(--light);
+    border-bottom: 0.1rem solid var(--light);
+    width: fit-content;
+}
+
+@media screen and (min-width:850px) {
+    .panel {
+        background-image: linear-gradient(175deg,var(--light-a),transparent 15%);
+    }
 }
