--- a/src/components/ContactBox.astro
+++ b/src/components/ContactBox.astro
@@ -4,17 +4,17 @@
 					
 
 <div class="contact_box">
-    <a href="#" class="email">
+    <a href="mailto:office@cleannetwork.co.uk" class="email">
         <span class="icon"></span>
         office@cleannetwork.co.uk
     </a>
     
-    <a href="#" class="tel">
+    <a href="tel:+44-020-3411-0275" class="tel">
         <span class="icon"></span>
         London: 020 3411 0275
     </a>
     
-    <a href="#" class="tel">
+    <a href="tel:+44-0121-3927529" class="tel">
         <span class="icon"></span>
         Birmingham: 0121 3927529
     </a>
