--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -39,7 +39,7 @@
 <style>
 
 	section.contact {
-    	padding: clamp(3rem,19vw,9rem) 0;
+    	padding: clamp(3rem,19vw,9rem) 0 clamp(3rem,19vw,11rem);
     	scroll-margin: clamp(1rem,16vmin,7.5rem);
         background-color: var(--light-a);
         position:relative;
@@ -117,8 +117,8 @@
         min-width: 100%;
         width: 100%;
         max-width: 100%;
-        min-height: 15rem;
-        height: 15rem;
+        min-height: 13rem;
+        height: 13rem;
         max-height: 25rem;
     }
 
