--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -46,7 +46,7 @@ import "../../styles/collections.css"
     
                                                 <a href={`/sectors/${sectors.slug}`} class="cta" aria-label={`Read more about ${sectors.data.title}`}><span></span> About <span class="lowercase">{sectors.data.title} {String(sectors.data.title).includes('Cleaning') ? "" : "Cleaning"} Sector</span></a>
 
-                                                <a href="/#contact" class="quote" aria-label="Get a free quote for our cleaning sectors">Get a free quote</a>
+                                                <a href="/contact/" class="quote" aria-label="Get a free quote for our cleaning sectors">Get a free quote</a>
                                             </div>
                                             
                                             <div class="image">
