--- a/src/pages/services/[...slug].astro
+++ b/src/pages/services/[...slug].astro
@@ -38,7 +38,7 @@ import "../../styles/posts.css"
     <article>
         <Content />
 
-        <a href="/#contact" class="cta" aria-label="Get a free quote for our cleaning services">Get a free quote</a>
+        <a href="/contact/" class="cta" aria-label="Get a free quote for our cleaning services">Get a free quote</a>
 
         <a href="/services/" class="back">Back to services</a>
     </article>
