--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -49,7 +49,7 @@ import "../../styles/collections.css"
     
                                                 <a href={`/services/${services.slug}`} class="cta" aria-label={`Read more about ${services.data.title}`}><span></span> About <span class="lowercase">{services.data.title} {String(services.data.title).includes('Cleaning') ? "" : "Cleaning"} Service</span></a>
 
-                                                <a href="/#contact" class="quote" aria-label="Get a free quote for our cleaning services">Get a free quote</a>
+                                                <a href="/contact/" class="quote" aria-label="Get a free quote for our cleaning services">Get a free quote</a>
                                             </div>
                                             
                                             <div class="image">
