--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,18 +3,14 @@ export interface Props {
     title: string;
     description?: string;
 }
-// Import the global.css file here so that it is included on
-// all pages through the use of the <BaseHead /> component.
+
 import "../styles/global.css";
 
-// export interface Props {
-//     title: string;
-//     description?: string;
-// }
-
-// const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 const { title, description } = Astro.props;
+
+import { SITE_TITLE, SITE_DESCRIPTION, OG_IMAGE } from "../consts";
 ---
 
 <meta charset="UTF-8" />
@@ -24,24 +20,20 @@ const { title, description } = Astro.props;
 <link rel="sitemap" href="/sitemap-index.xml" />
 
 <title>{title}</title>
-<meta name="title" content={title} />
-<meta name="description" content="COMMERCIAL & OFFICE CLEANING SERVICES The proof is in our numbers. We clean over 500 offices each day with our office cleaning services. 95% of our clients choose to stay with us at the end of their contract. View our Services Request your Quote Rated 5 out of 5 on Google Confidence guaranteed with over" />
+<meta name="title" content={SITE_TITLE} />
+<meta name="description" content={SITE_DESCRIPTION} />
 
-<!-- <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-<meta name="generator" content={Astro.generator} />
 
 <link rel="canonical" href={canonicalURL} />
 
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
-<meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image, Astro.url)} />
+<meta property="og:description" content={SITE_DESCRIPTION} />
+<meta property="og:image" content={OG_IMAGE} />
 
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
-<meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image, Astro.url)} /> -->
+<meta property="twitter:description" content={SITE_DESCRIPTION} />
+<meta property="twitter:image" content={OG_IMAGE} />
