--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -30,7 +30,7 @@ const { description } = Astro.props;
                     <ContactBox />
                 </div>
                 
-                <iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                <iframe width="100%" height="100%" title="Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
             </div>
 
             <ContactSection />
@@ -48,6 +48,9 @@ const { description } = Astro.props;
         position: relative;
         border-top: 0.3rem solid var(--light);
         /* box-shadow: 0 -1rem 3rem -1rem var(--light-b); */
+        background-image: url(/textures/dot-grid.jpg);
+        background-image: image-set(url(/textures/dot-grid.jpg) , url(/textures/dot-grid.webp) );
+        background-size: 40rem;
     }
 
     .map::after {
@@ -88,12 +91,19 @@ const { description } = Astro.props;
         border: 0.1rem solid var(--primary-b);
         transform: scale(0.8);
         transform-origin: top right;
+        box-shadow: 0 2.3rem 1.5rem -2rem var(--primary-a), inset 0 1.5rem 2rem -2rem;
     }
 
     @media screen and (min-width:850px) {
         .map {
             position: sticky;
             top:clamp(1rem,16vmin,7.5rem);
+            border-top: unset;
+        }
+
+        .map iframe {
+            border: 0.8rem solid var(--light);
+            box-sizing: border-box;
         }
 
         .contact_box_ctnr {
