--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -23,7 +23,7 @@ h2::after {
     scroll-margin: calc(clamp(1rem,16vmin,7.5rem) + 5rem);
     width: var(--mobile-width);
     margin-inline: auto;
-    margin-top: clamp(4rem, 5vmin, 8rem);
+    margin-top: clamp(4rem, 5vw, 8rem);
 }
 
 .division > .flex {
